# MCP

./: .env  main.py  pyproject.toml  weather.py
client/: client_langchain.ipynb
