[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "mcp[cli]>=1.13.0",
    "python-dotenv>=1.1.1",
]
